@@ -1,3 +1,5 @@
+2008-07-09 Improve mathtext radical rendering - MGD
+
 2008-07-08 Improve mathtext superscript placement - MGD
 
 2008-07-07 Fix custom scales in pcolormesh (thanks Matthew Turk) - MGD
